      other problems.  Thanks, Patrick Matthäi.  (Closes: #471740)
  * checks/copyright-file{.desc,}:
    + [RA] Check for copyright files containing the Apache 2.0 license,
      which is now in common-licenses.
  * checks/cruft:
    + [RA] Format: 3.0 (quilt) packages are not native even though they
      have no *.diff.gz.  Thanks, Raphael Hertzog.  (Closes: #483384)
  * checks/fields:
    + [RA] Syntax-check Breaks like other relationship fields.  Warn if
      any packages use Breaks for right now.  Only check for duplicate
      libraries and Tcl versions in dependency fields, not Breaks,
      Conflicts, and other similar fields.  Warn if Breaks is used without
      a version.  Check that Breaks is not inconsistent with other
      dependency fields.
    + [RA] Use Lintian::Data to load the obsolete package list.
    + [RA] When checking whether a debug package has proper dependencies,
      allow a dependency on any package name that starts the same as the
      debug package up to the first dash.  This will hopefully produce
      fewer false positives.  Thanks, Josselin Mouette.  (Closes: #476587)
  * checks/filenames{.desc,}:
    + [RA] Warn about BTS data directories in packages (.be and
      .ditrack).  Patch by Ben Finney.  (Closes: #481787)
  * checks/init.d:
    + [RA] Try to allow for postinst scripts written in Perl and still
      recognize the update-rc.d calls.
  * checks/manpages{.desc,}:
    + [RA] Only ignore errors about wrapping lines for Asian locale man
      pages, since that's where the groff trouble lies.  Ignore character
      set errors for all man pages with old versions of man and no man
      pages with current versions of man since the new character set
      handling should cope.  (Closes: #474052)
    + [FL] Ignore more unicode issues with old man.
    + [RA] Warn about inclusion of the country name in the localized man
      page directory unless it's one of the known exceptions.